:arrow_up_small: Fixed arrow on mobile

--- a/app/assets/sass/objects.scss
+++ b/app/assets/sass/objects.scss
@@ -176,8 +176,7 @@ section > p {margin-top:0;}
 
 @media (max-width:480px) {
   .u-alignright .share-options:after, .u-alignright .share-options:before {
-    left:auto;
-    right:10px;
+    left:90%;
   }
 
   .share-print {
